--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>tr8n</groupId>
-  <artifactId>com.tr8n.samples.welp.swing</artifactId>
+  <groupId>com.tr8nhub</groupId>
+  <artifactId>swing-samples</artifactId>
   <version>0.1.0</version>
   
   <dependencies>
@@ -13,14 +13,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>tr8n</groupId>
-            <artifactId>tr8n_core</artifactId>
+            <groupId>com.tr8nhub</groupId>
+            <artifactId>swing-clientsdk</artifactId>
             <version>0.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.directory.studio</groupId>
-            <artifactId>org.apache.commons.codec</artifactId>
-            <version>1.8</version>
         </dependency>
   </dependencies>
   
